<resources>
    <string name="app_name">SnakeGame</string>
    <string name="titleMainMenu">Snake: Apple Eater</string>
    <string name="btnComenzar">COMENZAR</string>
    <string name="btnPuntuaciones">PUNTUACIONES</string>
    <string name="btnRegistrar">REGISTRAR</string>
    <string name="btnReintentar">REINTENTAR</string>
    <string name="btnMenuPrincipal">MENU PRINCIPAL</string>
    <string name="titlePuntuaciones">Puntuaciones</string>
    <string name="titleMuerte">¡HAS MUERTO!</string>
    <string name="titleRegistrarPuntuacion">Inserta tu nombre</string>
</resources>
